# GeoDock

./: .gitignore  GeoDock.ipynb  LICENSE  README.md  environment.yml  requirements.txt  setup.cfg  setup.py
geodock/: GeoDockRunner.py
geodock/data/: gen_data.py
geodock/datasets/: RepD2_dataset.py  af_dataset.py  bound_dataset.py  gen_dataset.py  geodock_datamodule.py  geodock_dataset.py  preprocess.py  repd2_dataset.py  unbound_dataset.py
geodock/dockq/: get_dockq.py
geodock/model/: GeoDock.py  interface.py
geodock/model/lightning_logs/version_0/: hparams.yaml
geodock/model/modules/: graph_module.py  iterative_transformer.py  structure_module.py
geodock/refine/: openmm_ref.py  pyrosetta_ref.py
geodock/scripts/: fix.sh  run.sh  run_db5.sh  run_dips.sh  to_csv.py
geodock/trainer/: run.py  submit_gpu.sh  train.py  utils.py
geodock/trainer/config/: config.yaml
geodock/trainer/config/callbacks/: default.yaml  paramfreezer.yaml
geodock/trainer/config/datamodule/: default.yaml  dips_datamodule.yaml  geodock_datamodule.yaml  geodock_finetune_datamodule.yaml
geodock/trainer/config/logger/: wandb.yaml
geodock/trainer/config/model/: default.yaml  geodock.yaml
geodock/trainer/config/trainer/: default.yaml
geodock/trainer/logs/runs/2023-05-18/21-33-57/.hydra/: hydra.yaml  overrides.yaml
geodock/trainer/logs/runs/2023-05-18/21-33-57/wandb/: latest-run
geodock/trainer/logs/runs/2023-05-18/23-45-45/.hydra/: config.yaml  hydra.yaml
geodock/utils/: compute_dockq.py  coords6d.py  docking.py  embed.py  loss.py  metrics.py  pdb.py  predict.py
(+9 files in other folders)
