[metadata]
name = geodock
version = 1.0.4
author = Lee-Shin Chu
license = MIT
long-description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    torch>=2.0.1
    pytorch-lightning>=1.8.6
    einops>=0.6.0
    biotite>=0.37.0
    fair-esm>=2.0.0

[options.packages.find]
exclude =
    weights/*
    data/*
    trainer/*
    benchmark/*
